add api for homepage
